--- a/css/style.css
+++ b/css/style.css
@@ -568,10 +568,13 @@ h2 {
 	margin-left: 10px;
 	margin-top: 30px;
 }
-.film-pages .slick-dots{
+.film-pages .dots-list{
 	margin-bottom: 30px;
+	display: flex;
+	list-style: none;
+	justify-content: center;
 }
-.film-pages .slick-dots a {
+.film-pages .dots-list a {
 	color: #000;
 	font-family: Roboto;
 	font-style: normal;
@@ -584,21 +587,22 @@ h2 {
 	width: 100%;
 	height: 100%;
 }
-.film-pages .slick-dots li {
+.film-pages .dots-list li {
 	background-color: #fff;
 	width: 40px;
 	height: 40px;
 	border-radius: 50%;
 	border: 1px solid #CE0000;
+	margin-right: 10px;
 }
-.film-pages .slick-dots li.slick-active  {
+.film-pages .dots-list li.dot-active  {
 	background-color: #CE0000;
 	color: #fff;
 }
-.film-pages .slick-dots li.slick-active  a{
+.film-pages .dots-list li.dot-active  a{
 	color: #fff;
 }
-.film-pages .slick-arrow {
+/*.film-pages .slick-arrow {
 	bottom: 0;
 	margin-top: 970px;
 }
@@ -626,7 +630,7 @@ h2 {
     background: url(../images/vectors/ArrowRightS.png);
     background-repeat: no-repeat;
 }
-
+*/
 
 
 
