--- a/css/style.css
+++ b/css/style.css
@@ -1805,3 +1805,301 @@ h2 {
 .tab_content {
 	margin-top: 30px;
 }
+
+
+.user_info {
+	margin-top: 64px;
+}
+.user_info {
+	display: flex;
+	min-width: 411px;
+	padding-top: 30px;
+	font-family: Roboto;
+	font-style: normal;
+	font-weight: bold;
+	font-size: 14px;
+	line-height: 16px;
+	position: relative;
+}
+.user_top_banner_container{
+	max-width: 1000px;
+	width: 100%;
+}
+.user_info_img {
+	width: 270px;
+	height: 405px;
+	margin-right: 30px;
+	border-radius: 5px;
+}
+.user_info_text {
+	
+}
+.user_info_text span {
+	color: #CE0000;
+}
+.user_name {
+	font-weight: 900;
+	font-size: 32px;
+	line-height: 37px;
+	
+}
+.user_name_change {
+	color: #CE0000;
+	font-size: 13px;
+	line-height: 21px;
+	margin-bottom: 20px;
+	border: none;
+	outline: none;
+	background: none;
+}
+.user_change {
+	position: absolute;
+	right:0px;
+	font-family: Roboto;
+	font-style: normal;
+	font-weight: bold;
+	z-index: 100;
+	width: 190px;
+	height: 50px;
+	background: #1e1e1e;
+	border: none;
+	outline: none;
+	font-weight: bold;
+	font-size: 18px;
+	line-height: 21px;
+	color: rgba(255,255,255,0.7);
+	display: inline-block;
+	margin: 0;
+	padding: 0;
+	transition: 0.1s;
+	border-radius: 5px;
+}
+.user_change:hover{
+	background-color: #444444;
+	color: rgba(255,255,255,1);
+}
+.email_change {
+	margin-top: 60px;
+}
+.user_img {
+	display: flex;
+	flex-direction: column;
+}
+.user_img_change {
+	font-family: Roboto;
+	font-style: normal;
+	font-weight: bold;
+	z-index: 100;
+	width: 190px;
+	height: 50px;
+	background: #1e1e1e;
+	border: none;
+	outline: none;
+	font-weight: bold;
+	font-size: 18px;
+	line-height: 21px;
+	color: rgba(255,255,255,0.7);
+	display: inline-block;
+	transition: 0.1s;
+	border-radius: 5px;
+	margin-left: 40px;
+	margin-top: 10px;
+}
+.user_fav {
+	font-family: Roboto;
+	font-style: normal;
+	font-weight: bold;
+	z-index: 100;
+	width: 190px;
+	height: 50px;
+	border: none;
+	outline: none;
+	font-weight: bold;
+	font-size: 18px;
+	line-height: 21px;
+	background: #CE0000;
+	color: #fff;
+	display: inline-block;
+	transition: 0.1s;
+	border-radius: 5px;
+	margin-top: 50px;
+	margin-left: 40px;
+}
+.user_img_change:hover{
+	background-color: #444444;
+	color: rgba(255,255,255,1);
+}
+.user_fav:hover{
+	filter: brightness(75%);
+}
+.fav_content {
+	margin-top: 30px;
+	width: 100%;
+	display: none;
+	flex-wrap: wrap;
+  	justify-content: center;
+  	align-items: center;
+}
+.fav_item {
+	margin-right: 20px;
+	margin-bottom: 10px;
+}
+
+.password_change_form {
+	display: none;
+	flex-direction: column;
+	align-items: center;
+	position: absolute;
+	background: #222;
+	border-radius: 5px;
+	padding: 50px;
+	z-index: 99999;
+	top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
+}
+.password_change_submit{
+	color: #fff;
+	font-size: 18px;
+	height: 40px;
+	cursor: pointer;
+	background-color: #CE0000;
+	outline: none;
+	border:0;
+	display: inline-block;
+	height: 55px;
+	border-radius: 5px;
+	display: flex;
+	width: 150px;
+	align-items: center;
+	justify-content: space-around;			
+}
+.email_change_form {
+	display: none;
+	flex-direction: column;
+	align-items: center;
+	position: absolute;
+	background: #222;
+	border-radius: 5px;
+	padding: 50px;
+	z-index: 99999;
+	top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
+}
+.email_change_submit{
+	color: #fff;
+	font-size: 18px;
+	height: 40px;
+	cursor: pointer;
+	background-color: #CE0000;
+	outline: none;
+	border:0;
+	display: inline-block;
+	height: 55px;
+	border-radius: 5px;
+	display: flex;
+	width: 150px;
+	align-items: center;
+	justify-content: space-around;			
+}
+.nick_change_form {
+	display: none;
+	flex-direction: column;
+	align-items: center;
+	position: absolute;
+	background: #222;
+	border-radius: 5px;
+	padding: 50px;
+	z-index: 99999;
+	top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
+}
+.nick_change_submit{
+	color: #fff;
+	font-size: 18px;
+	height: 40px;
+	cursor: pointer;
+	background-color: #CE0000;
+	outline: none;
+	border:0;
+	display: inline-block;
+	height: 55px;
+	border-radius: 5px;
+	display: flex;
+	width: 150px;
+	align-items: center;
+	justify-content: space-around;			
+}
+.img_change_form {
+	display: none;
+	flex-direction: column;
+	align-items: center;
+	position: absolute;
+	background: #222;
+	border-radius: 5px;
+	padding: 50px;
+	z-index: 99999;
+	top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
+}
+.img_change_submit{
+	color: #fff;
+	font-size: 18px;
+	height: 40px;
+	cursor: pointer;
+	background-color: #CE0000;
+	outline: none;
+	border:0;
+	display: inline-block;
+	height: 55px;
+	border-radius: 5px;
+	display: flex;
+	width: 150px;
+	align-items: center;
+	justify-content: space-around;			
+}
+.img_new_file {
+	font-family: Roboto;
+	font-style: normal;
+	font-weight: bold;
+	z-index: 100;
+	width: 150px;
+	height: 50px;
+	background: #1e1e1e;
+	border: none;
+	outline: none;
+	font-weight: bold;
+	font-size: 18px;
+	line-height: 21px;
+	color: rgba(255,255,255,0.7);
+	display: inline-block;
+	transition: 0.1s;
+	border-radius: 5px;
+	margin-bottom: 30px;
+}
+.img_new_file:hover{
+	background-color: #444444;
+	color: rgba(255,255,255,1);
+}
+.user_active {
+	display: flex;
+}
+.user_feed {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.user_feed span {
+	color: #CE0000;
+}
+.user_feed_h {
+	margin-bottom: -20px;
+	margin-top: 20px;
+}
