--- a/css/style.css
+++ b/css/style.css
@@ -2103,3 +2103,15 @@ h2 {
 	margin-bottom: -20px;
 	margin-top: 20px;
 }
+
+.user_info_text form input {
+	font-size: 18px;
+	width: 400px;
+	height: 40px;
+	border-radius: 5px;
+	border: 1px #444444 solid;
+	padding: 0 10px;
+	margin-bottom: 20px;
+	background-color: #444444;
+	color: #fff;
+}
