--- a/css/style.css
+++ b/css/style.css
@@ -1828,6 +1828,8 @@ h2 {
 .user_info_img {
 	max-width: 270px;
 	max-height: 405px;
+	min-width: 270px;
+	min-height: 270px;
 	margin-right: 30px;
 	border-radius: 5px;
 }
@@ -2120,6 +2122,21 @@ h2 {
 	margin-bottom: 10px;
 }
 .form-control-file {
-	margin-top: 10px;
+	display: none;
 }
-
+#div_id_pictur label {
+	color: #fff;
+	font-size: 18px;
+	height: 40px;
+	cursor: pointer;
+	background-color: #444;
+	outline: none;
+	border:0;
+	display: inline-block;
+	height: 55px;
+	border-radius: 5px;
+	display: flex;
+	width: 150px;
+	align-items: center;
+	justify-content: center;	
+}
