--- a/css/style.css
+++ b/css/style.css
@@ -141,6 +141,8 @@ h2 {
 	z-index: 1;
 	margin-left: auto;
 	margin-right: 0;
+	display: flex;
+	align-items: center;
 }
 
 .search {
@@ -158,6 +160,12 @@ h2 {
 }
 .login {
 	margin-left: 65px;
+	font-size: 14px;
+	line-height: 16px;
+	margin-right: 5px;
+}
+.profile {
+	margin-right: 5px;
 	font-size: 14px;
 	line-height: 16px;
 }
@@ -2202,9 +2210,7 @@ h2 {
 }
 
 .notif {
-	position: absolute;
-	right: -50px;
-	top: 20px;
+	
 }
 .notifBtn {
 	width: 30px;
