ubral naher scrollbar in notification

--- a/css/style.css
+++ b/css/style.css
@@ -2261,6 +2261,9 @@ h2 {
 	max-height: 500px;
 	min-height: 500px;
 }
+.notifListUL::-webkit-scrollbar { width: 0; }
+.notifListUL { -ms-overflow-style: none; }
+.notifListUL { overflow: -moz-scrollbars-none; }
 .notifNote {
 	max-width: 100%;
 	padding: 10px;
