--- a/css/style.css
+++ b/css/style.css
@@ -51,6 +51,24 @@ body {
 	font-weight: 400;
 
 }
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #1e1e1e;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #444;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
 .page {
 	margin-top: 64px;
 	margin-right: auto;
