--- a/css/style.css
+++ b/css/style.css
@@ -2315,3 +2315,19 @@ h2 {
 .notifHead span {
 	color: #CE0000;
 }
+
+.none p{
+	width: 100%;
+	text-align: center;
+	color: #e9e9e9;
+}
+.none {
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	background: #1E1E1E;
+	margin-top: 30px;
+	border-radius: 5px;
+	width: 100%;
+	padding: 20px;
+}
